fix game board buttons shifting on hover

--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ button {
   text-decoration: none;
   border: none;
   background-color: transparent;
+  width: 8rem;
+  height: 1rem;
 }
 
 a:hover,
